--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
           function downloadFile(url) {
             var a = document.createElement("a");
             a.href = url;
-            a.download = url.split('/').pop();
+            a.download = url.split('https://www.canva.com/design/DAFq_oquUeg/B63pnI8r4ZmpuHg1wXHyvg/edit?utm_content=DAFq_oquUeg&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton').pop();
             document.body.appendChild(a);
             a.click();
             document.body.removeChild(a);
