--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
   // Code to download the file
 }
         </script>
-        <button class="download-button">Download My CV</button>
+        <a href="https://drive.google.com/file/d/1uH2ETWdKClxO8wRAKVPAH83cKuvMoNSu/view?usp=sharing" download><bold>Download My CV</bold></a>
         <div class="row">
           <div class="col-lg-6">
             <h3 class="resume-title">Sumary</h3>
